NEXT-17784 - Fix condition misaligned

--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-action/sw-flow-sequence-action.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-action/sw-flow-sequence-action.scss
@@ -173,6 +173,10 @@
         padding: 0 24px;
         margin-bottom: 0;
         width: 100%;
+
+        .icon--small-default-x-circle {
+            cursor: pointer;
+        }
     }
 
     &__selection-action {
